# Kit

./: .gitignore  CMakeLists.txt  README.md  main.cpp  terminal.h  widget.h
src/: branchwidget.cpp  branchwidget.h  gitinterface.cpp  gitinterface.h  main.cpp  mainwindow.cpp  mainwindow.h  statuswidget.cpp  statuswidget.h  terminal.cpp  terminal.h  widget.h
src/widgets/: branchwidget.cpp  branchwidget.h  stashwidget.cpp  stashwidget.h  statuswidget.cpp  statuswidget.h
